# mingw-sandbox

./: CMakeLists.txt  build.sh  hello-world.cpp  x86_64-w64-mingw32.cmake
